# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2005-02-01 21:24:32 GMT	John Goerzen <jgoerzen@complete.org>	patch-183

    Summary:
      Updated Debian files
    Revision:
      missingh--head--0.7--patch-183


    modified files:
     COPYRIGHT ChangeLog MissingH.cabal debian/changelog
     debian/copyright libsrc/MissingH/List.hs testsrc/Listtest.hs


2005-02-01 21:22:19 GMT	John Goerzen <jgoerzen@complete.org>	patch-182

    Summary:
      Adding AnyDBM features
    Revision:
      missingh--head--0.7--patch-182


    new files:
     libsrc/MissingH/AnyDBM.hs

    modified files:
     ChangeLog Makefile MissingH.cabal libsrc/MissingH/FiniteMap.hs
     libsrc/MissingH/List.hs testsrc/Listtest.hs


2005-01-28 17:43:43 GMT	John Goerzen <jgoerzen@complete.org>	patch-181

    Summary:
      Added doc directory
    Revision:
      missingh--head--0.7--patch-181


    new files:
     doc/.arch-ids/=id doc/.arch-ids/Pesco.pdf.id
     doc/.arch-ids/pescofmt.fmt.id doc/Makefile doc/Pesco.pdf
     doc/pescofmt.fmt

    modified files:
     COPYRIGHT ChangeLog Makefile libsrc/MissingH/Regex/Pesco.lhs

    new directories:
     doc doc/.arch-ids


2005-01-28 17:29:47 GMT	John Goerzen <jgoerzen@complete.org>	patch-180

    Summary:
      Added Pesco's regexp library; updated copyright; fixed Printf.hs to work with cpphs
    Revision:
      missingh--head--0.7--patch-180


    new files:
     libsrc/MissingH/Regex/.arch-ids/=id
     libsrc/MissingH/Regex/.arch-ids/Pesco.lhs.id
     libsrc/MissingH/Regex/Pesco.lhs

    modified files:
     COPYRIGHT ChangeLog Makefile MissingH.cabal
     libsrc/MissingH/Printf.hs

    new directories:
     libsrc/MissingH/Regex libsrc/MissingH/Regex/.arch-ids


2005-01-27 18:44:49 GMT	John Goerzen <jgoerzen@complete.org>	patch-179

    Summary:
      build-dep on newer haskell-devscripts
    Revision:
      missingh--head--0.7--patch-179

