@@ -36,13 +36,15 @@ or on-disk items.
 module MissingH.AnyDBM (-- * The AnyDBM class
                         AnyDBM(..),
                         -- * AnyDBM utilities
-                        keysA, valuesA, mapA
+                        keysA, valuesA, mapA,
+                        strFromA, strToA
                        )
 where
 import Prelude hiding (lookup)
 import System.IO
 import Data.HashTable
 import Control.Exception
+import MissingH.List(strFromAL, strToAL)
 
 {- | The main class for items implementing this interface.
 
@@ -127,6 +129,18 @@ valuesA h = do l <- toListA h
 mapA :: AnyDBM a => a -> ((String, String) -> IO b) -> IO [b]
 mapA h func = do l <- toListA h
                  mapM func l
+
+{- | Similar to 'MissingH.List.strToAL' -- load a string representation
+into the AnyDBM.  You must supply an existing AnyDBM object;
+the items loaded from the string will be added to it. -}
+strToA :: AnyDBM a => a -> String -> IO ()
+strToA h s = insertListA h (strToAL s)
+
+{- | Similar to 'MissingH.List.strFromAL' -- get a string representation of
+the entire AnyDBM. -}
+strFromA :: AnyDBM a => a -> IO String
+strFromA h = do l <- toListA h 
+                return (strFromAL l)
 
 instance AnyDBM (HashTable String String) where
     insertA = insert
